[package]
name = "pluscodes"
description = "An implementation of plus codes, to be used as CLI tool or crate"
authors = ["Jan Andersson <jan.andersson@gmail.com>"]
repository = "https://github.com/janne/pluscodes-rs"
version = "0.5.0"
edition = "2021"
license = "MIT"
keywords = ["pluscodes", "geocode", "olc", "maps"]
documentation = "https://docs.rs/pluscodes"

[dependencies]
anyhow = "1.0.66"
regex = "1.7.0"
structopt = "0.3.26"
